Correct functionality for adding new songs from spotify to DB as well as saving user picks
